# llama-chat

./: README.md  pyproject.toml
.chainlit/: config.toml
src/: app.py  model.py
